tests/it/snapshots/it__snapshot_workflows__workflow_add_field.snap
---
source: tests/it/snapshot_workflows.rs
assertion_line: 128
description: "Add field happy path: MyInfo → AddField → MyInfo"
expression: output
---
═══ Step 1 ─ MyInfo — view card fields ═════════════════════
                                   Alice Smith


┌ [-] Ready to exchange? ──────────────────────────────────────────────────────┐
│                                                                              │
│  [#] Find someone nearby                                                     │
│      Share your contact card in person — private and secure.                 │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│   Email alice@company.com (Work)                                             │
│   Phone +41 79 123 45 67 (Mobile)                                            │
│   Website https://alice.example.com (Blog)                                   │
└──────────────────────────────────────────────────────────────────────────────┘









[Enter] Exchange Now  [a] Add Entry  [Enter] Group View  [Enter] Preview as...
  1 ★ My Card   │  2 Contacts   │  3 Exchange   │   4 Groups    │    5 More

═══ Step 2 ─ AddField — press 'a' (Add Entry) ══════════════
                               Add Entry to MyInfo
                                  Select a type

┌──────────────────────────────────────────────────────────────────────────────┐
│ ▸ • Phone                                                                    │
│   • Email                                                                    │
│   • Website                                                                  │
└──────────────────────────────────────────────────────────────────────────────┘
Value
┌ ⌨ type here ─────────────────────────────────────────────────────────────────┐
│Any custom info                                                               │
└──────────────────────────────────────────────────────────────────────────────┘

Display Name (optional)
┌ ⌨ type here ─────────────────────────────────────────────────────────────────┐
│e.g. Work, Personal, Mobile                                                   │
└──────────────────────────────────────────────────────────────────────────────┘
Comment (your eyes only, optional)
┌ ⌨ type here ─────────────────────────────────────────────────────────────────┐
│Only visible to you                                                           │
└──────────────────────────────────────────────────────────────────────────────┘

[EDIT]   [Enter] Save  [Esc] Cancel  [?] help  [Esc] back  [q] quit
  1 ★ My Card   │  2 Contacts   │  3 Exchange   │   4 Groups    │    5 More

═══ Step 3 ─ MyInfo — field saved, return to card ══════════
                                   Alice Smith


┌ [-] Ready to exchange? ──────────────────────────────────────────────────────┐
│                                                                              │
│  [#] Find someone nearby                                                     │
│      Share your contact card in person — private and secure.                 │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│   Email alice@company.com (Work)                                             │
│   Phone +41 79 123 45 67 (Mobile)                                            │
│   Website https://alice.example.com (Blog)                                   │
└──────────────────────────────────────────────────────────────────────────────┘









[Enter] Exchange Now  [a] Add Entry  [Enter] Group View  [Enter] Preview as...
  1 ★ My Card   │  2 Contacts   │  3 Exchange   │   4 Groups    │    5 More
