tests/it/snapshots/it__snapshot_workflows__workflow_backup.snap
---
source: tests/it/snapshot_workflows.rs
assertion_line: 284
description: "Backup happy path: Settings → Backup menu → Export form"
expression: output
---
═══ Step 1 ─ Settings — press '5' (More tab) → Settings ══
                                    Settings

┌ Profile ─────────────────────────────────────────────────────────────────────┐
┌ Privacy ─────────────────────────────────────────────────────────────────────┐
┌ Notifications ───────────────────────────────────────────────────────────────┐
┌ Appearance ──────────────────────────────────────────────────────────────────┐


┌ Accessibility ───────────────────────────────────────────────────────────────┐
└──────────────────────────────────────────────────────────────────────────────┘
┌ Security ────────────────────────────────────────────────────────────────────┐
└──────────────────────────────────────────────────────────────────────────────┘
┌ Backup & Recovery ───────────────────────────────────────────────────────────┐
┌ Network ─────────────────────────────────────────────────────────────────────┐
└──────────────────────────────────────────────────────────────────────────────┘
┌ Message Delivery ────────────────────────────────────────────────────────────┐
└──────────────────────────────────────────────────────────────────────────────┘
┌ Help & Support ──────────────────────────────────────────────────────────────┐
└──────────────────────────────────────────────────────────────────────────────┘
┌ About ───────────────────────────────────────────────────────────────────────┐
┌ Danger Zone ─────────────────────────────────────────────────────────────────┐
└──────────────────────────────────────────────────────────────────────────────┘
[?] help  [Esc] back  [q] quit
   1 My Card    │  2 Contacts   │  3 Exchange   │   4 Groups    │   5 ★ More

═══ Step 2 ─ Backup — select Backup ════════════════════════
                                Backup & Recovery

┌ [B] Protect your data ───────────────────────────────────────────────────────┐
│                                                                              │
│  Backup                                                                      │
│  Create an encrypted backup of your identity, contacts, and labels.          │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Backup level ────────────────────────────────────────────────────────────────┐
│ [x] Full backup (recommended)                                                │
└──────────────────────────────────────────────────────────────────────────────┘












[Enter] Create Backup  [Enter] Restore Backup  [?] help  [Esc] back  [q] quit
   1 My Card    │  2 Contacts   │  3 Exchange   │   4 Groups    │   5 ★ More

═══ Step 3 ─ BackupExport — select Create Backup ═══════════
                                Backup & Recovery

┌ [B] Protect your data ───────────────────────────────────────────────────────┐
│                                                                              │
│  Backup                                                                      │
│  Create an encrypted backup of your identity, contacts, and labels.          │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Backup level ────────────────────────────────────────────────────────────────┐
│ [x] Full backup (recommended)                                                │
└──────────────────────────────────────────────────────────────────────────────┘












[Enter] Create Backup  [Enter] Restore Backup  [?] help  [Esc] back  [q] quit
   1 My Card    │  2 Contacts   │  3 Exchange   │   4 Groups    │   5 ★ More
