tests/it/snapshots/it__snapshot_workflows__workflow_onboarding.snap
---
source: tests/it/snapshot_workflows.rs
assertion_line: 79
description: "Onboarding happy path: first launch → identity creation → what-next"
expression: output
---
═══ Step 1 ─ IdentityCheck — no identity detected ══════════
                                Welcome to Vauchi
                         Privacy-focused contact cards.

┌  ────────────────────────────────────────────────────────────────────────────┐
│                                                                              │
│  [*] Private by design                                                       │
│      Your data is end-to-end encrypted and never leaves your control.        │
│                                                                              │
│  [D] Multi-device                                                            │
│      Use Vauchi on all your devices with seamless sync.                      │
└──────────────────────────────────────────────────────────────────────────────┘












[Enter] Create new identity  [h] I already have an identity  [q] quit

═══ Step 2 ─ DefaultName — press 'Create New' ══════════════
                                 [1/4]  ● ○ ○ ○
                                What's your name?
                           How you appear to contacts

Enter the name you'd like to show on your contact card.

Display name
┌ ⌨ type here ─────────────────────────────────────────────────────────────────┐
│Enter your name                                                               │
└──────────────────────────────────────────────────────────────────────────────┘













[q] quit

═══ Step 3 ─ GroupsSetup — enter name + press 'Continue' ═══
                                 [2/4]  ○ ● ○ ○
                               Choose your groups
                             Organize who sees what

Groups are optional, but we strongly recommend them. They let you control exactl

┌ Suggested groups ────────────────────────────────────────────────────────────┐
│ [ ] Family                                                                   │
│ [ ] Friends                                                                  │
│ [ ] Coworkers                                                                │
│ [ ] Business                                                                 │
└──────────────────────────────────────────────────────────────────────────────┘
Add a custom group
┌ ⌨ type here ─────────────────────────────────────────────────────────────────┐
│Type a group name and press Enter                                             │
└──────────────────────────────────────────────────────────────────────────────┘







[Enter] Continue  [s] Skip  [q] quit

═══ Step 4 ─ ContactInfo — press 'Skip' ════════════════════
                                 [3/4]  ○ ○ ● ○
                                Add contact info
                       Optional — you can add more later.




















[Enter] Add phone number  [Enter] Add email address  [Enter] Add social profile

═══ Step 5 ─ WhatNext — press 'Continue' ═══════════════════
                                 [4/4]  ○ ○ ○ ●
                           What would you like to do?
                         This is what contacts will see




















[Enter] Exchange cards  [Enter] Import existing contacts
