tests/it/snapshots/it__snapshot_workflows__workflow_settings.snap
---
source: tests/it/snapshot_workflows.rs
assertion_line: 243
description: "Settings navigation: Settings → Privacy → Backup"
expression: output
---
═══ Step 1 ─ Settings — press '5' (More tab) → Settings ══
                                    Settings

┌ Profile ─────────────────────────────────────────────────────────────────────┐
┌ Privacy ─────────────────────────────────────────────────────────────────────┐
┌ Notifications ───────────────────────────────────────────────────────────────┐
┌ Appearance ──────────────────────────────────────────────────────────────────┐


┌ Accessibility ───────────────────────────────────────────────────────────────┐
└──────────────────────────────────────────────────────────────────────────────┘
┌ Security ────────────────────────────────────────────────────────────────────┐
└──────────────────────────────────────────────────────────────────────────────┘
┌ Backup & Recovery ───────────────────────────────────────────────────────────┐
┌ Network ─────────────────────────────────────────────────────────────────────┐
└──────────────────────────────────────────────────────────────────────────────┘
┌ Message Delivery ────────────────────────────────────────────────────────────┐
└──────────────────────────────────────────────────────────────────────────────┘
┌ Help & Support ──────────────────────────────────────────────────────────────┐
└──────────────────────────────────────────────────────────────────────────────┘
┌ About ───────────────────────────────────────────────────────────────────────┐
┌ Danger Zone ─────────────────────────────────────────────────────────────────┐
└──────────────────────────────────────────────────────────────────────────────┘
[?] help  [Esc] back  [q] quit
   1 My Card    │  2 Contacts   │  3 Exchange   │   4 Groups    │   5 ★ More

═══ Step 2 ─ Privacy — select Privacy & Data ═══════════════
                                 Privacy & Data

┌ [-] Data Status ─────────────────────────────────────────────────────────────┐
│                                                                              │
│  Deletion Status                                                             │
│  No deletion requested                                                       │
│                                                                              │
│  Consent                                                                     │
│  Active                                                                      │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│   data View My Data  See what data is stored locally                         │
│   consent Manage Consent  Review and update data consent                     │
└──────────────────────────────────────────────────────────────────────────────┘








[Enter] Export Data  [x] Delete Identity  [?] help  [Esc] back  [q] quit
   1 My Card    │  2 Contacts   │  3 Exchange   │   4 Groups    │   5 ★ More

═══ Step 3 ─ Settings — press Esc (back) ═══════════════════
                                    Settings

┌ Profile ─────────────────────────────────────────────────────────────────────┐
┌ Privacy ─────────────────────────────────────────────────────────────────────┐
┌ Notifications ───────────────────────────────────────────────────────────────┐
┌ Appearance ──────────────────────────────────────────────────────────────────┐


┌ Accessibility ───────────────────────────────────────────────────────────────┐
└──────────────────────────────────────────────────────────────────────────────┘
┌ Security ────────────────────────────────────────────────────────────────────┐
└──────────────────────────────────────────────────────────────────────────────┘
┌ Backup & Recovery ───────────────────────────────────────────────────────────┐
┌ Network ─────────────────────────────────────────────────────────────────────┐
└──────────────────────────────────────────────────────────────────────────────┘
┌ Message Delivery ────────────────────────────────────────────────────────────┐
└──────────────────────────────────────────────────────────────────────────────┘
┌ Help & Support ──────────────────────────────────────────────────────────────┐
└──────────────────────────────────────────────────────────────────────────────┘
┌ About ───────────────────────────────────────────────────────────────────────┐
┌ Danger Zone ─────────────────────────────────────────────────────────────────┐
└──────────────────────────────────────────────────────────────────────────────┘
[?] help  [Esc] back  [q] quit
   1 My Card    │  2 Contacts   │  3 Exchange   │   4 Groups    │   5 ★ More

═══ Step 4 ─ Backup — select Backup ════════════════════════
                                Backup & Recovery

┌ [B] Protect your data ───────────────────────────────────────────────────────┐
│                                                                              │
│  Backup                                                                      │
│  Create an encrypted backup of your identity, contacts, and labels.          │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Backup level ────────────────────────────────────────────────────────────────┐
│ [x] Full backup (recommended)                                                │
└──────────────────────────────────────────────────────────────────────────────┘












[Enter] Create Backup  [Enter] Restore Backup  [?] help  [Esc] back  [q] quit
   1 My Card    │  2 Contacts   │  3 Exchange   │   4 Groups    │   5 ★ More

═══ Step 5 ─ Settings — press Esc (back) ═══════════════════
                                    Settings

┌ Profile ─────────────────────────────────────────────────────────────────────┐
┌ Privacy ─────────────────────────────────────────────────────────────────────┐
┌ Notifications ───────────────────────────────────────────────────────────────┐
┌ Appearance ──────────────────────────────────────────────────────────────────┐


┌ Accessibility ───────────────────────────────────────────────────────────────┐
└──────────────────────────────────────────────────────────────────────────────┘
┌ Security ────────────────────────────────────────────────────────────────────┐
└──────────────────────────────────────────────────────────────────────────────┘
┌ Backup & Recovery ───────────────────────────────────────────────────────────┐
┌ Network ─────────────────────────────────────────────────────────────────────┐
└──────────────────────────────────────────────────────────────────────────────┘
┌ Message Delivery ────────────────────────────────────────────────────────────┐
└──────────────────────────────────────────────────────────────────────────────┘
┌ Help & Support ──────────────────────────────────────────────────────────────┐
└──────────────────────────────────────────────────────────────────────────────┘
┌ About ───────────────────────────────────────────────────────────────────────┐
┌ Danger Zone ─────────────────────────────────────────────────────────────────┐
└──────────────────────────────────────────────────────────────────────────────┘
[?] help  [Esc] back  [q] quit
   1 My Card    │  2 Contacts   │  3 Exchange   │   4 Groups    │   5 ★ More
